# simple-microservice-demo

./: .gitignore  Makefile  README.md  skaffold.yaml
gcp-manifests/: constants.py  deployment.yaml  services.jinja
gcp-manifests/tests/: validate_deployment.bats
hack/: make-docker-images.sh  make-release-artifacts.sh  make-release.sh
istio-manifests/: allow-egress-googleapis.yaml
kubernetes-manifests/: fastapiservice.yaml  frontend-bakery.yaml  frontend.yaml  helloservice.yaml
pb/: ms.proto
pb/grpc/health/v1/: health.proto
release/: istio-manifests.yaml  kubernetes-manifests.yaml
src/catalogue/: Dockerfile
src/catalogue/src/main/java/bakery/: CatalogueService.java  CatalogueServiceClient.java
src/frontend/: Pipfile  app.py  genproto.sh  ms_pb2_grpc.py  requirements.txt
src/frontend-bakery/: .gitignore  Dockerfile  README.md  build.gradle  docker-compose.yml  settings.gradle
src/frontend-bakery/src/main/java/com/: HelloWorldServlet.java
src/frontend-bakery/src/main/java/com/bakery/: FrontendBakeryServlet.java
src/frontend-bakery/src/main/webapp/WEB-INF/: web.xml
src/frontend/templates/: index.html
src/helloservice/: Dockerfile  genproto.sh  hello_client.py  hello_server.py  ms_pb2.py  pyproject.toml  requirements.txt
src/helloservice/tests/: test_helloservice.py
